--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "aws-sdk": "^2.382.0",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "express-handlebars": "^3.0.0",
+    "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.15.6",
-    "http": "0.0.0",
-    "morgan": "^1.9.1",
-    "request": "^2.88.0"
+    "mongoose": "^5.4.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
