--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aws-sdk": "^2.382.0",
     "bcryptjs": "^2.4.3",
+    "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
