--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aws-sdk": "^2.382.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "ejs": "^2.6.1",
@@ -18,6 +19,7 @@
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.15.6",
     "mongoose": "^5.4.2",
+    "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
