--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.6.1",
     "aws-sdk": "^2.382.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
@@ -21,6 +22,7 @@
     "mongoose": "^5.4.2",
     "multer": "^1.4.1",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "validator": "^10.10.0"
   }
 }
