--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "express-session": "^1.15.6",
     "mongoose": "^5.4.2",
     "multer": "^1.4.1",
+    "nodemon": "^1.18.9",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "shuffle-array": "^1.0.1",
     "validator": "^10.10.0"
   }
 }
