--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
