--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "shuffle-array": "^1.0.1",
+    "stripe": "^6.20.1",
     "validator": "^10.10.0"
   }
 }
