--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.1",
     "nodemon": "^1.18.9",
     "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "shuffle-array": "^1.0.1",
     "stripe": "^6.20.1",
