--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.15.6",
     "mongoose": "^5.4.2",
-    "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "nodemon": "^1.18.9",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^1.0.0",
@@ -32,5 +30,6 @@
     "shuffle-array": "^1.0.1",
     "stripe": "^6.20.1",
     "validator": "^10.10.0"
-  }
+  },
+  "devDependencies": {}
 }
