--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
+    "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
@@ -26,6 +27,7 @@
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^1.0.0",
+    "passport-instagram": "^1.0.0",
     "passport-local": "^1.0.0",
     "shuffle-array": "^1.0.1",
     "stripe": "^6.20.1",
