--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
-PORT=443 FB_CLIENT=2265968780327578 FB_SECRET=5bf6b7122584a67d902378e27500a7ac FB_CALLBACKURL=https://localhost:8443/auth/facebook/callback GG_CLIENT=958906150907-onvvm3rdsogn7stssm15hg0507cteiq2.apps.googleusercontent.com GG_SECRET=asmdl68diBLrCUycQeSPNcBM GG_CALLBACKURL=https://localhost:8443/auth/google/callback MONGO_URI=mongodb://demo:Sonthu1969@ds249824.mlab.com:49824/wallpaper STRIPE_SECRET=sk_test_ygzp8Ix4t0jkAjPivnO31l2i
+PORT=443 
+FB_CLIENT=2265968780327578 
+FB_SECRET=5bf6b7122584a67d902378e27500a7ac 
+FB_CALLBACKURL=https://localhost:8443/auth/facebook/callback 
+GG_CLIENT=958906150907-onvvm3rdsogn7stssm15hg0507cteiq2.apps.googleusercontent.com 
+GG_SECRET=asmdl68diBLrCUycQeSPNcBM 
+GG_CALLBACKURL=https://localhost:8443/auth/google/callback 
+MONGO_URI=mongodb://demo:Sonthu1969@ds249824.mlab.com:49824/wallpaper 
+STRIPE_SECRET=sk_test_ygzp8Ix4t0jkAjPivnO31l2i
