--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
+    "debug": "^4.1.1",
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
