add S3 with multer

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT=443 
+PORT=80 
 FB_CLIENT=2265968780327578 
 FB_SECRET=5bf6b7122584a67d902378e27500a7ac 
 FB_CALLBACKURL=https://localhost:80/auth/facebook/callback 
@@ -7,3 +7,5 @@ GG_SECRET=asmdl68diBLrCUycQeSPNcBM
 GG_CALLBACKURL=https://localhost:80/auth/google/callback 
 MONGO_URI=mongodb://demo:Sonthu1969@ds249824.mlab.com:49824/wallpaper 
 STRIPE_SECRET=sk_test_ygzp8Ix4t0jkAjPivnO31l2i
+S3_ACCESS_KEY=AKIAJL52WKLTJ3WW6M2A
+S3_SECRET_KEY=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
